remove underscore from dependencies (not needed)

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,6 @@
     "tests"
   ],
   "dependencies": {
-    "emoji-data-minimal": "~2.4.4",
-    "underscore": "~1.8.3"
+    "emoji-data-minimal": "~2.4.4"
   }
 }
