support for skin-tone-x modifiers on female/male modified emoji (Emoji 4.0); remove toUCS2 from public api; update to new version of emoji-data-minimal; some other minor improvements

--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-replace": "^0.5.4"
-  },
-  "dependencies": {
+    "gulp-replace": "^0.5.4",
     "underscore": "^1.8.3"
   }
 }
