--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp-eslint": "^3.0.1",
     "gulp-replace": "^0.5.4",
     "underscore": "^1.8.3"
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
